--- a/packages/bootstrap4-theme/src/scss/extends/_global-header.scss
+++ b/packages/bootstrap4-theme/src/scss/extends/_global-header.scss
@@ -286,6 +286,11 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
 #wrapper-header-main {
   border-bottom: 1px solid $uds-color-base-gray-3;
   background-color: #ffffff;
+
+  .container, .container-fluid, .container-xl, .container-lg, .container-md, .container-sm {
+    padding-left:12px;
+    padding-right:12px;
+  }
 }
 
 #header-main {
@@ -645,11 +650,6 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
 /*--------------------------------------------------------------
 6. Main Menu, Mobile Only
 --------------------------------------------------------------*/
-@include media-breakpoint-down(xl) {
-  #wrapper-header-main .container-lg {
-    padding: 0;
-  }
-}
 
 @media (max-width: 370px) {
   #header-main {
@@ -684,6 +684,10 @@ $fa-search: url($image-assets-path + '/font-awesome-svg/search.svg');
   }
 
   #header-main {
+
+    padding-left:12px;
+    padding-right:12px;
+
     .navbar {
       padding: 0;
       align-items: flex-start;
